# daft-video-embeddings

./: FRICTION_LOG.md  Makefile  README.md  pyproject.toml
friction/: UNFILTERED_Pt2_videoprism_parakeet.ipynb  UNFILTERED_video_embed_pipeline_e2e.ipynb
reference/: script_draft.py  videoprism_video_text_demo.ipynb  videoprism_video_text_demo.py
tests/: test_videoprism_video_text_demo.py
workload/: audio.py  embedding_udfs.py  sbd_image_embeddings_siglip.ipynb  sbd_window_siglip2.ipynb  video_embeddings.py  video_embeddings_videoprism.ipynb  video_embeddings_videoprism_.ipynb  video_qna.ipynb  video_reading.py  video_seeking.py
